--- a/php/test.html
+++ b/php/test.html
@@ -13,16 +13,24 @@
         バーコード<input type="number" v-model="jancode"><br>
         <input type="button" value="タバコ作成" @click="create_tobaco"><br>
         <br>
-        <h2>user</h2>
-        name<input type="text" v-model="user_name"><br>
-        pass<input type="text" v-model="user_pass"><br>
-        <input type="button" value="Login" @click="loginchk"><br>
+        <h2>createuser</h2>
+        今までにどれくらい吸ってきたか<input type="number" v-model="smokingnumber"><br>
         <input type="button" value="Create" @click="create_user"><br>
+
+        <h2>Login</h2>
+        id<input type="number" v-model="user_id"><br>
+        <input type="button" value="Login" @click="loginchk"><br>
         <br>
         <h2>create_smoking</h2>
         ユーザid<input type="number" v-model="user_id"><br>
         本数<input type="number" v-model="smokingnumber"><br>
         <input type="button" value="smoking" @click="create_smoking"><br>
+        <br>
+        <h2>create_smoking2</h2>
+        ユーザid<input type="number" v-model="user_id"><br>
+        本数<input type="number" v-model="smokingnumber"><br>
+        年<input type="number"min="1900" max="2023" v-model="year">月<input type="number"min="1" max="12" v-model="morth">日<input type="number"min="1" max="32" v-model="date">
+        <input type="button" value="smoking" @click="create_smoking_date"><br>
         <br>
         <h2>Ifstory</h2>
         金額<input type="number" v-model="money"><br>
